--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "stylelint-config-recommended": "^2.2.0"
   },
   "dependencies": {
-    "debug": "^4.1.1"
+    "debug": "^4.1.1",
+    "normalize.css": "^8.0.1"
   }
 }
